--- a/app/src/main/res/layout/activity_insertion.xml
+++ b/app/src/main/res/layout/activity_insertion.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <Space
                 android:layout_width="match_parent"
                 android:layout_height="10dp" />
@@ -36,18 +37,9 @@
                     android:id="@+id/city"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
-                    android:text="Città:"
+                    android:text="Città: "
                     android:textColor="@color/black"
                     android:textSize="18dp" />
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="10dp" />
-
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="10dp" />
 
             </LinearLayout>
 
@@ -55,8 +47,7 @@
                 android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:text="Indirizzo:"
+                android:text="Indirizzo: "
                 android:textColor="@color/black"
                 android:textSize="18dp" />
 
@@ -68,10 +59,10 @@
                 android:id="@+id/description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:text="Descrizione:"
                 android:textColor="@color/black"
-                android:textSize="18dp" />
+                android:textSize="18dp"
+                android:background="@color/grey"/>
 
             <Space
                 android:layout_width="wrap_content"
@@ -95,33 +86,22 @@
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:text="Proprietario: "
                 android:textColor="@color/black"
                 android:textSize="18dp" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:text="Telefono: "
                 android:textColor="@color/black"
                 android:textSize="18dp" />
-
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="20dp" />
 
             <TextView
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:text="Email: "
                 android:textColor="@color/black"
                 android:textSize="18dp" />
