--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#EEEEEE</color>
     <color name="celeste">#86F8FF</color>
     <color name="blu">#5A98FC</color>
     <color name="blue">#3454D1 </color>
